--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
 
   <main>
-    <h2>📍 Brooklyn, NY</h2>
+    <h2>📍 Fort Collins, CO</h2>
     <p>Come visit us for fresh, handmade bagels daily.</p>
     <p><strong>Opening Hours:</strong> 7am – 3pm | Mon–Sun</p>
     <p><strong>Call us:</strong> <a href="tel:+15551232435">(555) 123-BAGEL</a></p>
